# Todo-app-AI-chatbot-main

./: CLAUDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.txt  FRONTEND_DEPLOYMENT_COMPLETE.md  QUICK-START.md  QUICK_DEPLOY_GUIDE.md  README-URDU.md  README_DEPLOYMENT.md  SETUP-COMPLETE.md  TROUBLESHOOTING.md  deploy-backend-to-render.sh  start-app.bat  stop-app.bat  verify_sync_db.py
.specify/memory/: constitution.md
backend/: .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  deploy-backend.ps1  deploy-backend.sh  deploy-to-render.sh  init_db.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/agents/: orchestrator.py  prompts.py
backend/app/mcp/: server.py  tools.py
backend/app/routes/: __init__.py  auth.py  chat.py  tasks.py
backend/app/services/: chat_service.py  task_service.py
backend/migrations/: 001_add_task_fields.sql  run_migration.py
frontend/: next.config.ts  package-lock.json  package.json  start-dev.bat  tailwind.config.js
frontend/app/: globals.css  layout.tsx
frontend/components/: AuthForm.tsx  CategoryBadge.tsx  CategorySelector.tsx  DatePicker.tsx  DueDateBadge.tsx  LandingPage.tsx  PriorityBadge.tsx  PrioritySelector.tsx  SearchBar.tsx  Sidebar.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  ThemeProvider.tsx  Toaster.tsx
frontend/lib/: api.ts  constants.ts  types.ts
specs/001-fullstack-todo-app/: data-model.md  plan.md  quickstart.md  (+3 more)
(+47 files in other folders)
